// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VTextarea.ts should calculate element height when using auto-grow prop 1`] = `
<div class="v-input v-textarea v-textarea--auto-grow v-textarea--no-resize v-input--is-label-active v-input--is-dirty v-input--is-focused theme--light v-text-field primary--text">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-text-field__slot">
        <textarea id="input-1"
                  rows="5"
                  value="this
is
a
really
long
text
that
should
hopefully
make
auto-grow
kick
in.
maybe?"
                  style="height: 120px;"
        >
        </textarea>
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light primary--text">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VTextarea.ts should render with custom rows attribute 1`] = `
<div class="v-input v-textarea theme--light v-text-field">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-text-field__slot">
        <textarea id="input-45"
                  rows="3"
        >
        </textarea>
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VTextarea.ts should render with default rows attribute 1`] = `
<div class="v-input v-textarea theme--light v-text-field">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-text-field__slot">
        <textarea id="input-41"
                  rows="5"
        >
        </textarea>
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VTextarea.ts should render with rows and autoGrow 1`] = `
<div class="v-input v-textarea v-textarea--auto-grow v-textarea--no-resize theme--light v-text-field">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-text-field__slot">
        <textarea id="input-53"
                  rows="7"
        >
        </textarea>
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VTextarea.ts should render with rows as string 1`] = `
<div class="v-input v-textarea theme--light v-text-field">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-text-field__slot">
        <textarea id="input-49"
                  rows="10"
        >
        </textarea>
      </div>
    </div>
    <div class="v-text-field__details">
      <div class="v-messages theme--light">
        <div class="v-messages__wrapper">
        </div>
      </div>
    </div>
  </div>
</div>
`;
